--- a/public/stylesheets/community.css
+++ b/public/stylesheets/community.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pangolin&display=swap");
+
 body {
   background-color: black;
   color: white;
@@ -6,14 +9,30 @@ a {
   color: white;
   text-decoration: none;
 }
-.attraction-img {
-  width: 800px;
-  height: 500px;
-}
 .center {
-  /* display : flex;
-    justify-items: center;
-    overflow-y: scroll; */
+  margin-left: 15%;
+  margin-right: 15%;
+}
+.map_container {
+  width: 100%;
+  height: 350px;
+}
+.attraction-img {
+  width: 60%;
+  height: 80%;
+  margin-left: 10px;
+  border-radius: 25px;
+}
+.attraction_i {
+  display: flex;
+  justify-content: left;
+  font-family: "Fredoka One", cursive;
+  font-size: 2rem;
+}
+p {
+  margin-left: 35%;
+  font-size: 4rem;
+  font-family: "Pangolin", cursive;
 }
 @keyframes shake {
   0% {
