--- a/public/stylesheets/view.css
+++ b/public/stylesheets/view.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Pangolin&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gaegu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap");
 a {
   color: inherit;
   text-decoration: none;
@@ -12,6 +15,15 @@ body {
 .fas-container {
   font-size: 1em;
   color: white;
+}
+h2 {
+  font-size: 4em;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Pangolin", cursive;
+  animation: shake 4s infinite;
 }
 .chat {
   /* width: 120px;
@@ -40,11 +52,65 @@ body {
   display: block;
 }
 ul li {
-  display: block;
-  /* width : 60px; */
   list-style: none;
+  display: block;
+}
+
+.comment-nick {
+  font-size: 2rem;
+  font-family: "Pangolin", "Gaegu", cursive;
+}
+.main_comment {
+  font-size: 2rem;
+  font-family: "Pangolin", "Gaegu", cursive;
+}
+.time {
+  font-size: 1rem;
+  font-family: "Walter Turncoat", cursive;
 }
 .view_img {
   width: 900px;
   height: 500px;
+  border-radius: 35px;
+  box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.2);
+  margin-bottom: 10px;
+}
+.total_comments {
+  border-radius: 35px;
+  box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.2);
+}
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  20% {
+    transform: translate(-2px, 1px) rotate(-1deg);
+  }
+  30% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(-1px, 1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(1px, -1px) rotate(-2deg);
+  }
+  60% {
+    transform: translate(2px, 1px) rotate(1deg);
+  }
+  70% {
+    transform: translate(-1px, 2px) rotate(2deg);
+  }
+  80% {
+    transform: translate(2px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(-1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(2px, 1px) rotate(-1deg);
+  }
 }
